if ( "${ASHES_BUILD_RENDERER_PLUGINS}" STREQUAL "" )
	set( ASHES_BUILD_RENDERER_PLUGINS TRUE )
endif ()

if ( "${ASHES_BUILD_RENDERER_PLUGINS}" STREQUAL "TRUE" )
	set( ASHES_BUILD_PLUGINS TRUE CACHE BOOL "Build renderer plugins" FORCE )
	if ( "${ASHES_BUILD_RENDERER_OGL3}" STREQUAL "ON" )
		set( ASHES_BUILD_OGL3 TRUE CACHE BOOL "Build OpenGL 3.X renderer plugin" FORCE )
	else ()
		set( ASHES_BUILD_OGL3 FALSE CACHE BOOL "Build OpenGL 3.X renderer plugin" FORCE )
	endif ()
	if ( "${ASHES_BUILD_RENDERER_OGL4}" STREQUAL "ON" )
		set( ASHES_BUILD_OGL4 TRUE CACHE BOOL "Build OpenGL 4.X renderer plugin" FORCE )
	else ()
		set( ASHES_BUILD_OGL4 FALSE CACHE BOOL "Build OpenGL 4.X renderer plugin" FORCE )
	endif ()
	if ( "${ASHES_BUILD_RENDERER_VKN}" STREQUAL "ON" )
		set( ASHES_BUILD_VKN TRUE CACHE BOOL "Build Vulkan renderer plugin" FORCE )
	else ()
		set( ASHES_BUILD_VKN FALSE CACHE BOOL "Build Vulkan renderer plugin" FORCE )
	endif ()
	if ( WIN32 )
		if ( "${ASHES_BUILD_RENDERER_D3D11}" STREQUAL "ON" )
		set( ASHES_BUILD_D3D11 TRUE CACHE BOOL "Build Direct3D 11 renderer plugin" FORCE )
		else ()
			set( ASHES_BUILD_D3D11 FALSE CACHE BOOL "Build Direct3D 11 renderer plugin" FORCE )
		endif ()
	else ()
		set( ASHES_BUILD_D3D11 FALSE )
	endif ()
	if ( "${ASHES_BUILD_RENDERER_TEST}" STREQUAL "ON" )
		set( ASHES_BUILD_TEST TRUE CACHE BOOL "Build Test renderer plugin" FORCE )
	else ()
		set( ASHES_BUILD_TEST FALSE CACHE BOOL "Build Test renderer plugin" FORCE )
	endif ()
else ()
	option( ASHES_BUILD_PLUGINS "Build renderers plugins" OFF )
endif ()

if ( MSVC )
	add_definitions(
		-D_ENFORCE_MATCHING_ALLOCATORS=0
		-DNOMINMAX
		# -DWIN32_LEAN_AND_MEAN
	)
endif ()

set( ASHES_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR} )
set( ASHES_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR} )
set( SPIRV_CROSS_DIR ${ASHES_SOURCE_DIR}/../external/SPIRV-Cross )

add_subdirectory( Ashes )

if ( ASHES_BUILD_PLUGINS )
	if ( "${ASHES_STATIC_RENDERER_PLUGINS}" STREQUAL "" )
		set( ASHES_STATIC_RENDERER_PLUGINS FALSE )
	endif ()

	if ( "${ASHES_STATIC_RENDERER_PLUGINS}" STREQUAL "TRUE" )
		option( ASHES_STATIC_RENDERERS "Build renderers as static libraries" ON )
	else ()
		option( ASHES_STATIC_RENDERERS "Build renderers as static libraries" OFF )
	endif ()

	if ( ASHES_BUILD_OGL3 )
		add_subdirectory( Gl3Renderer )
	endif ()
	if ( ASHES_BUILD_OGL4 )
		add_subdirectory( Gl4Renderer )
	endif ()
	if ( ASHES_BUILD_VKN )
		add_subdirectory( VkRenderer )
	endif ()
	if ( ASHES_BUILD_D3D11 )
		add_subdirectory( D3D11Renderer )
	endif ()
	if ( ASHES_BUILD_TEST )
		add_subdirectory( TestRenderer )
	endif ()
	set( ENABLED_RENDERERS ${ENABLED_RENDERERS} PARENT_SCOPE )
endif ()
